--- a/BackApi/BackApi/BackApi.csproj
+++ b/BackApi/BackApi/BackApi.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\APIServiceFactory\APIServiceFactory.csproj" />
+    <ProjectReference Include="..\IBusinessLogic\IBusinessLogic.csproj" />
   </ItemGroup>
 
   <ItemGroup>
