--- a/BackApi/APIServiceFactory/APIServiceFactory.csproj
+++ b/BackApi/APIServiceFactory/APIServiceFactory.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.10" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BussinesLogic\BussinesLogic.csproj" />
+    <ProjectReference Include="..\IBusinessLogic\IBusinessLogic.csproj" />
+  </ItemGroup>
+
 </Project>
